# Scaler-HFT-2027

MarketDataSystem/: .gitignore  CMakeLists.txt  README.md
MarketDataSystem/include/: market_data.h  ring_buffer.h  shm_helper.h  utils.h
MarketDataSystem/src/: publisher.cpp  shm_consumer.cpp  tcp_consumer.cpp
OrderBook/: order_book.cpp
